# GalaxySimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
src/: CMakeLists.txt  ExportDLL.hpp
src/Algorithm/: AlgorithmInterface.hpp  BarnesHutAlgorithm.cpp  BarnesHutAlgorithm.hpp  CpuSimpleAlgorithm.cpp  CpuSimpleAlgorithm.hpp  CudaBarnesHutAlgorithm.cu  CudaBarnesHutAlgorithm.hpp  CudaGFieldAlgorithm.cu  CudaGFieldAlgorithm.hpp  CudaSimpleAlgorithm.cu  CudaSimpleAlgorithm.hpp
src/Algorithm/Nodes/: Bbox.hpp  CudaLastTreeNode.cu  CudaLastTreeNode.hpp  CudaTreeNode.cu  CudaTreeNode.hpp  FirstTreeNode.hpp  ITreeNode.hpp  LastTreeNode.hpp  LastTreeNodeUsingCuda.cu  LastTreeNodeUsingCuda.hpp  OctreeNode.hpp  SedecTreeNode.hpp  TreeNode.hpp
src/GalaxyGenerator/: GalaxyGenerator.hpp  GalaxyGeneratorGPU.cu
src/Physics/: Star.hpp  TypeDef.hpp  Vec3.hpp  constant.hpp  dVec3.hpp  function.hpp
src/Render/: ImageGen.cpp  ImageGen.hpp  ProbabilityComputer.cpp  ProbabilityComputer.hpp
src/Simulation/: BarnesHutSim.hpp  CMakeLists.txt  SimpleSim.hpp  Simulate.cpp  TimeCompute.hpp
src/Test/: BarnesHutTest.cpp  BenchMark.cpp  CMakeLists.txt  GenImageTest.cpp  Simulate.cpp  test.cpp
src/Utils/: Chrono.hpp
